--- a/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\log4net-1.2.11\bin\net\4.0\release\log4net.dll</HintPath>
+      <HintPath>..\..\OSLC4NetPrereqs\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
