--- a/OSLC4Net_SDK/OSLC4Net.DotNetRdfProvider/DotNetRdfProvider.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.DotNetRdfProvider/DotNetRdfProvider.csproj
@@ -31,11 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="dotNetRDF">
-      <HintPath>..\..\..\..\..\..\temp\core\obj\Debug\dotNetRDF.dll</HintPath>
+    <Reference Include="dotNetRDF, Version=0.8.2.1954, Culture=neutral, PublicKeyToken=6055ffe4c97cc780, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\OSLC4NetPrereqs\dotNetRDF.dll</HintPath>
     </Reference>
-    <Reference Include="log4net">
-      <HintPath>..\..\..\..\..\..\log4net-1.2.11\bin\net\4.0\release\log4net.dll</HintPath>
+    <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\OSLC4NetPrereqs\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
