Add support for RDF collections

--- a/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute\OslcRdfCollectionType.cs" />
     <Compile Include="Exceptions\OslcCoreDeregistrationException.cs" />
     <Compile Include="Exceptions\OslcCoreRegistrationException.cs" />
     <Compile Include="Exceptions\OslcCoreInvalidRepresentationException.cs" />
