--- a/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
@@ -47,6 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute\OslcResponseInfoCollection.cs" />
+    <Compile Include="Attribute\OslcResponseInfoArray.cs" />
+    <Compile Include="Attribute\OslcResponseInfo.cs" />
+    <Compile Include="Attribute\OslcFilteredResource.cs" />
     <Compile Include="Attribute\OslcRdfCollectionType.cs" />
     <Compile Include="Exceptions\OslcCoreDeregistrationException.cs" />
     <Compile Include="Exceptions\OslcCoreRegistrationException.cs" />
