Issue 4:  Add Service Provider support

--- a/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\OslcCoreInvalidAttributeException.cs" />
     <Compile Include="Model\ResponseInfoCollection.cs" />
     <Compile Include="Model\ResponseInfoArray.cs" />
     <Compile Include="Model\ResponseInfo.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Exceptions\OslcCoreRelativeURIException.cs" />
     <Compile Include="Exceptions\MessageExtractor.cs" />
     <Compile Include="Exceptions\OslcCoreApplicationException.cs" />
+    <Compile Include="Model\ServiceProviderFactory.cs" />
     <Compile Include="OSLC4NetConstants.cs" />
     <Compile Include="Model\AbstractResource.cs" />
     <Compile Include="Model\AnyResource.cs" />
