Initial Coding of JSON provider

--- a/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core/OSLC4Net.Core.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\OslcCoreMissingNamespacePrefixException.cs" />
+    <Compile Include="Exceptions\OslcCoreMissingNamespaceDeclarationException.cs" />
     <Compile Include="Exceptions\OslcCoreInvalidAttributeException.cs" />
     <Compile Include="Model\ResponseInfoCollection.cs" />
     <Compile Include="Model\ResponseInfoArray.cs" />
