--- a/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
@@ -47,12 +47,17 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestChangeManagementJson.cs" />
     <Compile Include="TestChangeManagementXml.cs" />
     <Compile Include="TestChangeManagementRdfXml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\JsonProvider\JsonProvider.csproj">
+      <Project>{469BA948-728B-4B8C-80E9-7EC06CED8196}</Project>
+      <Name>JsonProvider</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\DotNetRdfProvider.csproj">
       <Project>{DFE6E48C-D5B1-4FC6-8D94-C72286080F78}</Project>
       <Name>DotNetRdfProvider</Name>
