--- a/OSLC4Net_SDK/OSLC4Net.StockQuoteSample/OSLC4Net.StockQuoteSample.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.StockQuoteSample/OSLC4Net.StockQuoteSample.csproj
@@ -245,17 +245,17 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JsonProvider\JsonProvider.csproj">
+    <ProjectReference Include="..\JsonProvider\OSLC4Net.Core.JsonProvider.csproj">
       <Project>{469BA948-728B-4B8C-80E9-7EC06CED8196}</Project>
-      <Name>JsonProvider</Name>
+      <Name>OSLC4Net.Core.JsonProvider</Name>
     </ProjectReference>
     <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj">
       <Project>{C07B57BD-3356-4AD8-8050-D708B023A8EC}</Project>
       <Name>OSLC4Net.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\DotNetRdfProvider.csproj">
+    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj">
       <Project>{DFE6E48C-D5B1-4FC6-8D94-C72286080F78}</Project>
-      <Name>DotNetRdfProvider</Name>
+      <Name>OSLC4Net.Core.DotNetRdfProvider</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
