--- a/OSLC4Net_SDK/OSLC4Net.StockQuoteSample/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.StockQuoteSample/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr34" version="3.4.19004.1" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
+  <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
