--- a/OSLC4Net_SDK/JsonProvider/packages.config
+++ b/OSLC4Net_SDK/JsonProvider/packages.config
@@ -4,5 +4,6 @@
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="System.Json" version="4.0.20126.16343" targetFramework="net40" />
   <package id="VDS.Common" version="1.1.2" targetFramework="net40" />
 </packages>
