--- a/OSLC4Net_SDK/OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.DotNetRdfProviderTests/OSLC4Net.Core.DotNetRdfProviderTests.csproj
@@ -38,7 +38,7 @@
   <ItemGroup>
     <Reference Include="dotNetRDF, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\temp\dotNetRDF_090\Libraries\core\net40\bin\Debug\dotNetRDF.dll</HintPath>
+      <HintPath>..\..\OSLC4NetPrereqs\dotNetRDF.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
