--- a/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="dotNetRDF">
+      <HintPath>..\..\OSLC4NetPrereqs\dotNetRDF.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\OSLC4NetPrereqs\log4net.dll</HintPath>
@@ -40,6 +43,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Net.Http.WebRequest, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,15 +51,70 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Oslc\Exceptions\JazzAuthFailedException.cs" />
+    <Compile Include="Oslc\Exceptions\MessageExtractor.cs" />
+    <Compile Include="Oslc\Exceptions\OslcClientApplicationException.cs" />
+    <Compile Include="Oslc\Exceptions\ResourceNotFoundException.cs" />
+    <Compile Include="Oslc\Exceptions\RootServicesException.cs" />
+    <Compile Include="Oslc\Jazz\JazzFormAuthClient.cs" />
+    <Compile Include="Oslc\Jazz\JazzRootServicesConstants.cs" />
+    <Compile Include="Oslc\Jazz\JazzRootServicesHelper.cs" />
+    <Compile Include="Oslc\OslcClient.cs" />
+    <Compile Include="Oslc\OSLCConstants.cs" />
+    <Compile Include="Oslc\Jazz\JazzConstants.cs" />
+    <Compile Include="Oslc\Resources\ArchitectureConstants.cs" />
+    <Compile Include="Oslc\Resources\ArchitectureLinkType.cs" />
+    <Compile Include="Oslc\Resources\ArchitectureResource.cs" />
+    <Compile Include="Oslc\Resources\AutomationConstants.cs" />
+    <Compile Include="Oslc\Resources\AutomationPlan.cs" />
+    <Compile Include="Oslc\Resources\AutomationRequest.cs" />
+    <Compile Include="Oslc\Resources\AutomationResult.cs" />
+    <Compile Include="Oslc\Resources\ChangeRequest.cs" />
+    <Compile Include="Oslc\Resources\CmConstants.cs" />
+    <Compile Include="Oslc\Resources\OslcQuery.cs" />
+    <Compile Include="Oslc\Resources\OslcQueryParameters.cs" />
+    <Compile Include="Oslc\Resources\OslcQueryResult.cs" />
+    <Compile Include="Oslc\Resources\ParameterInstance.cs" />
+    <Compile Include="Oslc\Resources\QmConstants.cs" />
+    <Compile Include="Oslc\Resources\QmResource.cs" />
+    <Compile Include="Oslc\Resources\Requirement.cs" />
+    <Compile Include="Oslc\Resources\RequirementCollection.cs" />
+    <Compile Include="Oslc\Resources\RmConstants.cs" />
+    <Compile Include="Oslc\Resources\RmUtil.cs" />
+    <Compile Include="Oslc\Resources\TestCase.cs" />
+    <Compile Include="Oslc\Resources\TestExecutionRecord.cs" />
+    <Compile Include="Oslc\Resources\TestPlan.cs" />
+    <Compile Include="Oslc\Resources\TestResult.cs" />
+    <Compile Include="Oslc\Resources\TestScript.cs" />
+    <Compile Include="Oslc\Exceptions\JazzAuthErrorException.cs" />
     <Compile Include="ServiceProviderRegistryClient.cs" />
     <Compile Include="ServiceProviderRegistryURIs.cs" />
     <Compile Include="OslcRestClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JsonProvider\OSLC4Net.Core.JsonProvider.csproj">
+      <Project>{469BA948-728B-4B8C-80E9-7EC06CED8196}</Project>
+      <Name>OSLC4Net.Core.JsonProvider</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj">
       <Project>{C07B57BD-3356-4AD8-8050-D708B023A8EC}</Project>
       <Name>OSLC4Net.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj">
+      <Project>{DFE6E48C-D5B1-4FC6-8D94-C72286080F78}</Project>
+      <Name>OSLC4Net.Core.DotNetRdfProvider</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
