--- a/OSLC4Net_SDK/OSLC4Net.DotNetRdfProvider/OSLC4Net.Core.DotNetRdfProvider.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.DotNetRdfProvider/OSLC4Net.Core.DotNetRdfProvider.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="dotNetRDF, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\temp\dotNetRDF_090\Libraries\core\net40\bin\Debug\dotNetRDF.dll</HintPath>
+      <HintPath>..\..\OSLC4NetPrereqs\dotNetRDF.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
