--- a/OSLC4Net_SDK/OSLC4Net.Client/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.Client/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="dotNetRDF" version="1.0.0.2473" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
+  <package id="VDS.Common" version="1.2.0" targetFramework="net40" />
 </packages>
