--- a/OSLC4Net_SDK/OSLC4Net.Client.Samples/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.Client.Samples/packages.config
@@ -3,4 +3,5 @@
   <package id="dotNetRDF" version="1.0.0.2473" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.TestApi" version="0.6.0.0" targetFramework="net40" />
+  <package id="VDS.Common" version="1.2.0" targetFramework="net40" />
 </packages>
