--- a/OSLC4Net_SDK/OSLC4Net.Core.Query/OSLC4Net.Core.Query.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core.Query/OSLC4Net.Core.Query.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Impl\OslcOrderByParser.cs" />
     <Compile Include="Impl\OslcPrefixLexer.cs" />
     <Compile Include="Impl\OslcPrefixParser.cs" />
+    <Compile Include="Impl\OslcSearchTermsLexer.cs" />
+    <Compile Include="Impl\OslcSearchTermsParser.cs" />
     <Compile Include="Impl\ScopedSortTermImpl.cs" />
     <Compile Include="Impl\SimpleSortTermImpl.cs" />
     <Compile Include="Impl\SortTermImpl.cs" />
@@ -62,6 +64,7 @@
     <Compile Include="PName.cs" />
     <Compile Include="QueryUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchTermsClause.cs" />
     <Compile Include="SimpleSortTerm.cs" />
     <Compile Include="SortTerm.cs" />
     <Compile Include="SortTerms.cs" />
@@ -70,10 +73,12 @@
     <Content Include="Impl\GeneratingParsers.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Grammars\OslcSearchTerms.g" />
     <None Include="Grammars\OslcOrderBy.g" />
     <None Include="Grammars\OslcPrefix.g" />
     <None Include="Impl\OslcOrderBy.tokens" />
     <None Include="Impl\OslcPrefix.tokens" />
+    <None Include="Impl\OslcSearchTerms.tokens" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
