--- a/OSLC4Net_SDK/OSLC4Net.Client/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.Client/packages.config
@@ -3,4 +3,8 @@
   <package id="dotNetRDF" version="1.0.0.2473" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="VDS.Common" version="1.2.0" targetFramework="net40" />
+  <package id="DotNetOpenAuth.Core" version="4.3.1.13153" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth.Common" version="4.3.1.13153" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.1.13153" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.3.1.13153" targetFramework="net40" />
 </packages>
