--- a/OSLC4Net_SDK/OSLC4Net.Client.Samples/OSLC4Net.Client.Samples.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client.Samples/OSLC4Net.Client.Samples.csproj
@@ -14,6 +14,8 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>OSLC4Net.Client.Samples.RQMFormSample</StartupObject>
+    <StartupObject>OSLC4Net.Client.Samples.RRCOAuthSample</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="dotNetRDF">
@@ -46,14 +48,25 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http, Version=2.1.10.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft ASP.NET\ASP.NET MVC 4\Assemblies\System.Net.Http.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Net.Http.2.1.10\lib\net40\System.Net.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\packages\Microsoft.Net.Http.2.1.10\lib\net40\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft ASP.NET\ASP.NET MVC 4\Assemblies\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\packages\Microsoft.Net.Http.2.1.10\lib\net40\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest, Version=2.1.10.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Net.Http.2.1.10\lib\net40\System.Net.Http.WebRequest.dll</HintPath>
     </Reference>
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
@@ -72,6 +85,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RRCOAuthSample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RQMFormSample.cs" />
     <Compile Include="RRCFormSample.cs">
@@ -80,9 +94,17 @@
     <Compile Include="RTCFormSample.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\JsonProvider\OSLC4Net.Core.JsonProvider.csproj">
+      <Project>{469BA948-728B-4B8C-80E9-7EC06CED8196}</Project>
+      <Name>OSLC4Net.Core.JsonProvider</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OSLC4Net.Client\OSLC4Net.Client.csproj">
       <Project>{EED02B8F-2C90-4484-B4B6-BB510750B84C}</Project>
       <Name>OSLC4Net.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OSLC4Net.Core.Query\OSLC4Net.Core.Query.csproj">
+      <Project>{B7EC82FE-64D2-4271-8D04-3044046360FA}</Project>
+      <Name>OSLC4Net.Core.Query</Name>
     </ProjectReference>
     <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj">
       <Project>{C07B57BD-3356-4AD8-8050-D708B023A8EC}</Project>
@@ -92,9 +114,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="log4net.properties" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
