--- a/OSLC4Net_SDK/OSLC4Net.Core.Query/OSLC4Net.Core.Query.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Core.Query/OSLC4Net.Core.Query.csproj
@@ -126,6 +126,12 @@
     <None Include="Impl\OslcWhere.tokens" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj">
+      <Project>{C07B57BD-3356-4AD8-8050-D708B023A8EC}</Project>
+      <Name>OSLC4Net.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
