--- a/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MSTest.TestFramework" version="2.2.8" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
